@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-26T16:16:43Z",
+  "timestamp" : "2022-07-27T01:10:26Z",
   "count_outdated" : 419,
   "uniques_outdated" : 226,
-  "count" : 440,
+  "count" : 441,
   "uniques" : 237,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
