@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 2,
   "clones": [
     {
@@ -49,7 +49,7 @@
     },
     {
       "timestamp": "2022-07-26T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
